# codeforces

./: README.md
cpp/: CMakeLists.txt  accidental_victory_1490_E.cpp  alyona_and_mex_682_B.cpp  alyona_and_narrow_fridge_1119_B.cpp  anton_and_letters_443_A.cpp  anton_and_polyhedrons_785_A.cpp  applejack_storages_1393_B.cpp  array_splitting_1197_C.cpp  bad_prices_1213_B.cpp  basketball_exercise_1195_C.cpp  binary_string_reconstruction_1352_F.cpp  birthday_cake_629_A.cpp  bit_plus_plus_282_A.cpp  books_279_B.cpp  brutality_1107_C.cpp  burgers_1207_A.cpp  candies_1189_C.cpp  choosing_teams_432_A.cpp  common_divisors_182_D.cpp  counting_kangaroos_372_A.cpp  create_the_teams_1380_C.cpp  cut_them_all_982_C.cpp  cutting_998_B.cpp  cyclic_components_977_E.cpp  dima_and_continuous_line_358_A.cpp  distinct_character_queries_1234_D.cpp  dominant_character_1605_C.cpp  element_extermination_1375_C.cpp  epic_transformation_1506_D.cpp  equality_1038_A.cpp  equalize_the_array_1490_F.cpp  erase_and_extend_1537_E1.cpp  even_odd_game_959_A.cpp  exams_479_C.cpp  fox_and_two_dots_510_B.cpp  fruits_12_C.cpp  functions_again_788_A.cpp  garderner_and_tree_1593_E.cpp  given_length_and_sum_of_digits_489_C.cpp  glass_carving_527_C.cpp  (+70 more)
java/src/solutions/: AndryushaAndColoredBalloons780C.java  AntonAndLetters443A.java  BearAndTwoPaths643B.java  CodeForOne768B.java  CommonDivisors182D.java  CompleteTheWord716B.java  CrosswordSolving822B.java  DominatedSubarray1257C.java  EvenPath1252C.java  Exams479C.java  FactoryRepairs627B.java  FieldOfWonders883E.java  HarryPotterAndHistoryOfMagic65B.java  (+31 more)
